fix: changed z-index in blackout class

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,9 +22,6 @@
 
 .blackout {
   position: relative;
-}
-
-.blackout * {
   z-index: 1;
 }
 
@@ -32,7 +29,7 @@
   content: "";
   position: absolute;
   inset: 0;
-  z-index: 0;
+  z-index: -1;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.6);
